<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PopupMenu.PrayerRequest"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:text="@string/txtvwPrayerRequestHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/txtvwPrayerRequestIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />


    <TextView
        android:text="@string/txtvwName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backwithborder"
        android:id="@+id/editTextEmail"
        android:inputType="textEmailAddress"

        android:hint="Email" />

    <EditText
        android:id="@+id/editTextLocaton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/backwithborder"
        android:hint="Location"
        android:inputType="text" />

    <TextView
        android:text="Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backwithborder"
        android:id="@+id/editTextNumber"

        android:hint="Phone number" />


    <EditText
        android:lines="10"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="Request type"
        android:inputType="text"
        android:background="@drawable/backwithborder"
        android:allowUndo="true"
        android:id="@+id/editTextMessage"
        android:layout_weight="0.40" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSend"
        android:text="@string/btnSendPrayerRequest"/>

    </LinearLayout>

</ScrollView>